# mistral-hackathon-sencha

./: .gitignore  package-lock.json  package.json  pyproject.toml  tsconfig.json  turbo.json
apps/backend/: .env.example  constants.py  nodemon.json  package.json  server.py
apps/backend/configs/: sencha.service
apps/backend/providers/: groq.py  mistral.py  openai.py
apps/backend/services/: createStories.py  createStory.py  extendStory.py  generateStoryImage.py  generateStoryVoice.py  sayHelloService.py  summarizeStory.py  toneStory.py
apps/backend/utils/: __init__.py  utils.py
apps/web/: .env.example  package.json  tailwind.config.js  theme.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.css  page.tsx
apps/web/app/components/: WritingOptionsModal.tsx  WritingVariationsModal.tsx  WrittingOptionsModal.tsx  WrittingVariationsModal.tsx
apps/web/app/writer/: layout.tsx  page.tsx
apps/web/components/: ExcalidrawWrapper.tsx
my-turborepo/: pnpm-lock.yaml
my-turborepo/my-turborepo/: package-lock.json
